--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,15 +1,8 @@
 spring.application.name=demo
+
 server.port=${SERVER_PORT:9090}
+
 server.servlet.session.timeout=10m
 
-spring.datasource.url=jdbc:mysql://mysql:3306/perfumeria?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=bredlyn29
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
-spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:true}
-spring.jpa.properties.hibernate.format_sql=${SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL:true}
-
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017/perfumeria}
+spring.data.mongodb.auto-index-creation=true
